<resources>
    <string name="app_name">walmarket</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lbl_title">WALMARKET</string>
    <string name="lbl_login_title">Sign in to Your Account</string>
    <string name="lbl_email">Email Address</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_password_hint">●●●●●●●</string>
    <string name="lbl_email_hint">your@domain.ca</string>
    <string name="lblimg">image</string>
    <string name="lbl_password_forgot">Forgot your password?</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_account_title">Don\'t have an account?</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_registration_title">Registration Form</string>
    <string name="lbl_fname">First Name</string>
    <string name="lbl_lname">Last Name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_return_sign">Return to sign in screen</string>
    <string name="lbl_account_created">Account Created</string>
    <string name="lbl_fname_hint">John</string>
    <string name="lbl_lname_hint">Toredo</string>
    <string name="lbl_address_hint">1234 Your Street</string>
    <string name="title_activity_main"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_my_cart">My Cart</string>
    <string name="lbl_sign_out">Sign Out</string>
    <string name="lbl_invite_friend">Invite Friends</string>
    <string name="lbl_others">More</string>
    <string name="lbl_find_store">Find a Store</string>
    <string name="lbl_account_info">Account Information</string>
    <string name="lbl_view_order">Order History</string>
    <string name="lbl_find_store_near">Find a store near me</string>
    <string name="lbl_postal_code">Postal Code</string>
    <string name="lbl_continue">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_near_store">Near Stores</string>
    <string name="nav_header_store">Select a Store...</string>
    <string name="imgAimLocation">Aim Location</string>
    <string name="lbl_invite_friends">Invite Friends</string>
    <string name="lbl_invite_friend_text">Invite friends and get 10% off on your next order</string>
    <string name="lbl_1">1.</string>
    <string name="lbl_2">2.</string>
    <string name="lbl_3">3.</string>
    <string name="lbl_4">4.</string>
    <string name="lbl_5">5.</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_friends_email">Friend\'s Email</string>
    <string name="ActInfo">Account Information</string>
    <string name="ApplyChanges">Apply Changes</string>
    <string name="lbl_select_items">Select Items</string>
    <string name="lbl_price">$Price</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_search_item">Type at least 3 letters to search an item...</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_pick_up">Pick-up at Store</string>
    <string name="lbl_delivery">Delivery</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_place_order">Place Order</string>
    <string name="lbl_order_history">Order History</string>
    <string name="btn_view_order">View Order</string>
    <string name="lbl_order_detail">Order Details</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_date">Date:</string>
    <string name="lbl_type">Type:</string>
    <string name="lbl_order_total">Total:</string>
    <string name="lbl_discount">Discount:</string>
    <string name="lbl_order_ID">Order ID</string>
    <string name="lbl_order_date">Date</string>
    <string name="lbl_order_type">Type</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_qty">Qty.</string>
    <string name="lbl_subtotal">Subtotal</string>


</resources>
