<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_store"
            android:icon="@drawable/ic_map"
            android:title="@string/lbl_find_store" />
        <item
            android:id="@+id/nav_acct_info"
            android:icon="@drawable/ic_info"
            android:title="@string/lbl_account_info" />
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/lbl_view_order" />
    </group>

    <item android:title="@string/lbl_others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_invite_friend"
                android:title="@string/lbl_invite_friend" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/lbl_sign_out" />
        </menu>
    </item>

</menu>
