<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@color/colorBG"
    tools:context=".AccountInformation">

    <Button
        android:id="@+id/btnRegister4"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="@dimen/btn_default_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="533dp"
        android:background="@drawable/roundbtn"
        android:onClick="applychange"
        android:text="@string/ApplyChanges"
        android:textColor="@color/colorBtnText" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="347dp"
        android:text="@string/lbl_address"

        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="289dp"
        android:text="@string/lbl_email"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/tvfName"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:text="@string/lbl_fname"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:text="@string/ActInfo"
        android:textColor="@color/colorTextGreen"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvlName"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="224dp"
        android:text="@string/lbl_lname"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="405dp"
        android:text="@string/lbl_password"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <EditText
        android:id="@+id/etfName"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="181dp"
        android:ems="10"
        android:hint="@string/lbl_fname_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="306dp"
        android:ems="10"
        android:hint="@string/lbl_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/etlName"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="241dp"
        android:ems="10"
        android:hint="@string/lbl_lname_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="364dp"
        android:ems="10"
        android:hint="@string/lbl_address_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="421dp"
        android:ems="10"
        android:hint="@string/lbl_password_hint"
        android:inputType="textPassword"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

</RelativeLayout>