<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".RegistrationActivity">

    <include layout="@layout/topbar" />

    <TextView
        android:id="@+id/lnkForgotPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="603dp"
        android:onClick="backSignIn"
        android:text="@string/lbl_return_sign"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="@dimen/btn_default_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="533dp"
        android:background="@drawable/roundbtn"
        android:onClick="register"
        android:text="@string/lbl_create_account"
        android:textColor="@color/colorBtnText"
        android:textSize="@dimen/btn_default_font_size" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="461dp"
        android:text="@string/lbl_confirm_password"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="347dp"
        android:text="@string/lbl_address"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginTop="289dp"
        android:text="@string/lbl_email"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:text="@string/lbl_fname"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="123dp"
        android:text="@string/lbl_registration_title"
        android:textColor="@color/colorTextGreen"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="224dp"
        android:text="@string/lbl_lname"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="405dp"
        android:text="@string/lbl_password"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />


    <EditText
        android:id="@+id/txtFName"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="181dp"
        android:ems="10"
        android:hint="@string/lbl_fname_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginTop="306dp"
        android:ems="10"
        android:hint="@string/lbl_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />


    <EditText
        android:id="@+id/txtLName"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginTop="241dp"
        android:ems="10"
        android:hint="@string/lbl_lname_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="364dp"
        android:ems="10"
        android:hint="@string/lbl_address_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />


    <EditText
        android:id="@+id/txtRegPassword"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="421dp"
        android:ems="10"
        android:hint="@string/lbl_password_hint"
        android:inputType="textPassword"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="477dp"
        android:ems="10"
        android:hint="@string/lbl_password_hint"
        android:inputType="textPassword"
        android:textSize="@dimen/txt_default"
        tools:ignore="autofill" />

</RelativeLayout>