<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".LoginActivity">

    <include layout="@layout/topbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:text="@string/lbl_login_title"
        android:textColor="@color/colorTextGreen"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="468dp"
        android:text="@string/lbl_account_title"
        android:textColor="@color/colorTextGreen"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        android:text="@string/lbl_email"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />

    <TextView
        android:id="@+id/lnkForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="291dp"
        android:onClick="forgotPassword"
        android:text="@string/lbl_password_forgot"
        android:textColor="@color/link"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="233dp"
        android:text="@string/lbl_password"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/lbl_default" />


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="249dp"
        tools:ignore="autofill"
        android:ems="10"
        android:hint="@string/lbl_password_hint"
        android:inputType="textPassword"
        android:textSize="@dimen/txt_default" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="186dp"
        tools:ignore="autofill"
        android:ems="10"
        android:hint="@string/lbl_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/txt_default" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="@dimen/btn_default_height"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="351dp"
        android:background="@drawable/roundbtn"
        android:onClick="signIn"
        android:text="@string/lbl_sign_in"
        android:textColor="@color/colorBtnText"
        android:textSize="@dimen/btn_default_font_size" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="@dimen/btn_default_width"
        android:layout_height="@dimen/btn_default_height"
        android:layout_alignStart="@+id/btnSignIn"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="495dp"
        android:background="@drawable/roundbtn"
        android:onClick="createAccount"
        android:text="@string/lbl_create_account"
        android:textColor="@color/colorBtnText"
        android:textSize="@dimen/btn_default_font_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="422dp"
        android:background="@color/colorText" />

</RelativeLayout>