<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/grid_item_image"
        android:layout_width="165dp"
        android:layout_height="85dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/lblimg"
        tools:srcCompat="@drawable/ic_cart_orange" />

    <TextView
        android:id="@+id/grid_item_desc"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_description"
        android:textAlignment="center"
        android:textColor="@color/colorTextGreen"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/grid_item_price"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_price"
        android:textAlignment="center"
        android:textColor="@color/colorTextGreen"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>