<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@color/colorBG"
    tools:context=".OrderHistoryFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/order_id_title"
            android:layout_width="26dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_order_ID"
            android:textColor="@color/colorTextGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_date_title"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_order_date"
            android:textColor="@color/colorTextGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_type_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_order_type"
            android:textColor="@color/colorTextGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_total_title"
            android:layout_width="31dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_total"
            android:textColor="@color/colorTextGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/lbl_order_history"
        android:textColor="@color/colorTextGreen"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lstOrderHistory"
        android:layout_width="match_parent"
        android:layout_height="505dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="104dp" />

</RelativeLayout>